--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <ul class="first-index list">
             <li class="i-list-item">
               <div class="goal-icon-box">
-                <svg xmlns="http://www.w3.org/2000/svg">
+                <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
                   <use href="./images/icons.svg#icon-antenna1"></use>
                 </svg>
               </div>
@@ -85,7 +85,7 @@
             </li>
             <li class="i-list-item">
               <div class="goal-icon-box">
-                <svg xmlns="http://www.w3.org/2000/svg">
+                <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
                   <use href="./images/icons.svg#icon-clock1"></use>
                 </svg>
               </div>
@@ -97,7 +97,7 @@
             </li>
             <li class="i-list-item">
               <div class="goal-icon-box">
-                <svg xmlns="http://www.w3.org/2000/svg">
+                <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
                   <use href="./images/icons.svg#icon-diagram1"></use>
                 </svg>
               </div>
@@ -109,7 +109,7 @@
             </li>
             <li class="i-list-item">
               <div class="goal-icon-box">
-                <svg xmlns="http://www.w3.org/2000/svg">
+                <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
                   <use href="./images/icons.svg#icon-astronaut1"></use>
                 </svg>
               </div>
@@ -177,6 +177,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -190,6 +191,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -203,6 +205,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -216,6 +219,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -243,6 +247,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -256,6 +261,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -269,6 +275,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -282,6 +289,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -309,6 +317,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -322,6 +331,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -335,6 +345,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -348,6 +359,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -375,6 +387,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -388,6 +401,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -401,6 +415,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -414,6 +429,7 @@
                   <li class="social-media-list">
                     <a class="sm-icon">
                       <svg
+                        class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
                         height="16"
@@ -472,7 +488,7 @@
     <!-- _________________________________________________________________________FOOTER-->
     <footer id="contacts" class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-logo-div">
           <a href="./index.html" class="logo link footer-logo"
             >Web<span class="logo-studio">Studio</span></a
           >
@@ -481,16 +497,17 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="sm-footer-div">
+        <div>
           <p class="social-media-text">Social media</p>
           <ul class="list sm-icons-footer">
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-instagram2"></use>
@@ -500,10 +517,11 @@
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-twitter1"></use>
@@ -513,10 +531,11 @@
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-facebook1"></use>
@@ -526,10 +545,11 @@
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-linkedin1"></use>
