--- a/portfolio.html
+++ b/portfolio.html
@@ -61,19 +61,29 @@
           <h1 class="visually-hidden">section</h1>
           <ul class="list filters">
             <li>
-              <button type="button" class="button">All</button>
+              <a class="filter-link">
+                <button type="button" class="button">All</button>
+              </a>
             </li>
             <li>
-              <button type="button" class="button">Web Site</button>
+              <a class="filter-link">
+                <button type="button" class="button">Web Site</button>
+              </a>
             </li>
             <li>
-              <button type="button" class="button">App</button>
+              <a class="filter-link">
+                <button type="button" class="button">App</button>
+              </a>
             </li>
             <li>
-              <button type="button" class="button">Design</button>
+              <a class="filter-link">
+                <button type="button" class="button">Design</button>
+              </a>
             </li>
             <li>
-              <button type="button" class="button">Marketing</button>
+              <a class="filter-link">
+                <button type="button" class="button">Marketing</button>
+              </a>
             </li>
           </ul>
           <!-- ____________________________________________________ img list section-->
