--- a/index.html
+++ b/index.html
@@ -451,35 +451,47 @@
         <div class="container"></div>
         <h2 class="index-h-two">Customers</h2>
          <ul class="customers list">
-            <li class="icon-list icon">
-              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+            <li class="icon-list">
+              <a class="customers-icon icon">
+              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo"></use>
               </svg>
+              </a>
             </li>
-            <li class="icon-list icon">
-              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+            <li class="icon-list">
+              <a class="customers-icon icon">
+              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo2"></use>
               </svg>
+              </a>
             </li>
-            <li class="icon-list icon">
-              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+            <li class="icon-list">
+              <a class="customers-icon icon">
+              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo3"></use>
               </svg>
+              </a>
             </li>
-            <li class="icon-list icon">
-              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+            <li class="icon-list">
+              <a class="customers-icon icon">
+              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo4"></use>
               </svg>
+              </a>
             </li>
-            <li class="icon-list icon">
-              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+            <li class="icon-list">
+              <a class="customers-icon icon">
+              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo5"></use>
               </svg>
+              </a>
             </li>
-            <li class="icon-list icon">
-              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+            <li class="icon-list">
+              <a class="customers-icon icon">
+              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo6"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
