--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <p class="index-p">Product Designer</p>
                 <ul class="list social-media-icons">
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -189,7 +189,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -203,7 +203,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -217,7 +217,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -245,7 +245,7 @@
                 <p class="index-p">Frontend Developer</p>
                 <ul class="list social-media-icons">
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -259,7 +259,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -273,7 +273,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -287,7 +287,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -315,7 +315,7 @@
                 <p class="index-p">Marketing</p>
                 <ul class="list social-media-icons">
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -329,7 +329,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -343,7 +343,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -357,7 +357,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -385,7 +385,7 @@
                 <p class="index-p">UI Designer</p>
                 <ul class="list social-media-icons">
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -399,7 +399,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -413,7 +413,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -427,7 +427,7 @@
                     </a>
                   </li>
                   <li class="social-media-list">
-                    <a class="sm-icon">
+                    <a href="" class="sm-icon">
                       <svg
                         class="svg-stuff"
                         xmlns="http://www.w3.org/2000/svg"
@@ -448,49 +448,85 @@
       </section>
       <!-- ________________________________________________________________________________CUSTOMERS ___-->
       <section class="section">
-        <div class="container"></div>
-        <h2 class="index-h-two">Customers</h2>
-         <ul class="customers list">
+        <div class="container">
+          <h2 class="index-h-two">Customers</h2>
+          <ul class="customers list">
             <li class="icon-list">
               <a class="customers-icon icon">
-              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
-                <use href="./images/icons.svg#icon-logo"></use>
-              </svg>
+                <svg
+                  class="svg-customer"
+                  width="104px"
+                  height="56px"
+                  viewBox="0 0 104 56"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-logo"></use>
+                </svg>
               </a>
             </li>
             <li class="icon-list">
               <a class="customers-icon icon">
-              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
-                <use href="./images/icons.svg#icon-logo2"></use>
-              </svg>
+                <svg
+                  class="svg-customer"
+                  width="104px"
+                  height="56px"
+                  viewBox="0 0 104 56"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-logo2"></use>
+                </svg>
               </a>
             </li>
             <li class="icon-list">
               <a class="customers-icon icon">
-              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
-                <use href="./images/icons.svg#icon-logo3"></use>
-              </svg>
+                <svg
+                  class="svg-customer"
+                  width="104px"
+                  height="56px"
+                  viewBox="0 0 104 56"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-logo3"></use>
+                </svg>
               </a>
             </li>
             <li class="icon-list">
               <a class="customers-icon icon">
-              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
-                <use href="./images/icons.svg#icon-logo4"></use>
-              </svg>
+                <svg
+                  class="svg-customer"
+                  width="104px"
+                  height="56px"
+                  viewBox="0 0 104 56"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-logo4"></use>
+                </svg>
               </a>
             </li>
             <li class="icon-list">
               <a class="customers-icon icon">
-              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
-                <use href="./images/icons.svg#icon-logo5"></use>
-              </svg>
+                <svg
+                  class="svg-customer"
+                  width="104px"
+                  height="56px"
+                  viewBox="0 0 104 56"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-logo5"></use>
+                </svg>
               </a>
             </li>
             <li class="icon-list">
               <a class="customers-icon icon">
-              <svg class="svg-customer" width="104px" height="56px" viewBox="0 0 104 56" fill="none">
-                <use href="./images/icons.svg#icon-logo6"></use>
-              </svg>
+                <svg
+                  class="svg-customer"
+                  width="104px"
+                  height="56px"
+                  viewBox="0 0 104 56"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-logo6"></use>
+                </svg>
               </a>
             </li>
           </ul>
