--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,9 @@
           <h1 class="visually-hidden">section</h1>
           <ul class="list filters">
             <li>
-              <a class="filter-link">
-                <button type="button" class="button">All</button>
-              </a>
+              <button type="button" class="button">
+                <a class="filter-link">All</a>
+              </button>
             </li>
             <li>
               <a class="filter-link">
