--- a/portfolio.html
+++ b/portfolio.html
@@ -61,35 +61,25 @@
           <h1 class="visually-hidden">section</h1>
           <ul class="list filters">
             <li>
-              <button type="button" class="button">
-                <a class="filter-link">All</a>
-              </button>
+              <button type="button" class="button">All</button>
             </li>
             <li>
-              <a class="filter-link">
-                <button type="button" class="button">Web Site</button>
-              </a>
+              <button type="button" class="button">Web Site</button>
             </li>
             <li>
-              <a class="filter-link">
-                <button type="button" class="button">App</button>
-              </a>
+              <button type="button" class="button">App</button>
             </li>
             <li>
-              <a class="filter-link">
-                <button type="button" class="button">Design</button>
-              </a>
+              <button type="button" class="button">Design</button>
             </li>
             <li>
-              <a class="filter-link">
-                <button type="button" class="button">Marketing</button>
-              </a>
+              <button type="button" class="button">Marketing</button>
             </li>
           </ul>
           <!-- ____________________________________________________ img list section-->
           <ul class="list portfolio-img-list">
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc1a.jpg"
                   alt="Log in interface of a banking app"
@@ -105,7 +95,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc2a.jpg"
                   alt="Hand holding a mobile phone while doing wireless payment via QR code."
@@ -119,7 +109,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc3a.jpg"
                   alt="Laptop and a mobile phone, monitors turned on. Both devices on blackish background."
@@ -133,7 +123,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc4a.jpg"
                   alt="Hand steering a car wheel inside a car. Mobile phone with navigation of the road set on the front window."
@@ -147,7 +137,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc5a.jpg"
                   alt="A mobile phone with a full moon screen on. Four alternate screen of the full moon shown next to a device."
@@ -161,7 +151,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc6a.jpg"
                   alt="Smiling woman wearing orange sweater, a hat and headphones is looking at her mobile phone. She looks happy."
@@ -175,7 +165,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc7a.jpg"
                   alt="Six different layouts of the same instagram stories"
@@ -189,7 +179,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc8a.jpg"
                   alt="A woman wearing whiteish cloths and reusable shopping bag full of veggies, walking in the green scenery."
@@ -203,7 +193,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link">
+              <a class="link aplication-link">
                 <img
                   src="./images/pc9a.jpg"
                   alt="Barista pouring milk into coffee cup, only hands shown."
@@ -222,7 +212,7 @@
     </main>
     <footer id="contacts" class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-logo-div">
           <a href="./index.html" class="logo link footer-logo"
             >Web<span class="logo-studio">Studio</span></a
           >
@@ -231,16 +221,17 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="sm-footer-div">
+        <div>
           <p class="social-media-text">Social media</p>
           <ul class="list sm-icons-footer">
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-instagram2"></use>
@@ -250,10 +241,11 @@
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-twitter1"></use>
@@ -263,10 +255,11 @@
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-facebook1"></use>
@@ -276,10 +269,11 @@
             <li class="social-media-list">
               <a class="sm-icon-f">
                 <svg
+                  class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                 >
                   <use href="./images/icons.svg#icon-linkedin1"></use>
