adding links to a

--- a/portfolio.html
+++ b/portfolio.html
@@ -225,7 +225,7 @@
           <p class="social-media-text">Social media</p>
           <ul class="list sm-icons-footer">
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
@@ -239,7 +239,7 @@
               </a>
             </li>
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
@@ -253,7 +253,7 @@
               </a>
             </li>
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
@@ -267,7 +267,7 @@
               </a>
             </li>
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
