--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
           <h2 class="index-h-two">Customers</h2>
           <ul class="customers list">
             <li class="icon-list">
-              <a class="customers-icon icon">
+              <a href="" class="customers-icon icon">
                 <svg
                   class="svg-customer"
                   width="104"
@@ -465,7 +465,7 @@
               </a>
             </li>
             <li class="icon-list">
-              <a class="customers-icon icon">
+              <a href="" class="customers-icon icon">
                 <svg
                   class="svg-customer"
                   width="104"
@@ -478,7 +478,7 @@
               </a>
             </li>
             <li class="icon-list">
-              <a class="customers-icon icon">
+              <a href="" class="customers-icon icon">
                 <svg
                   class="svg-customer"
                   width="104"
@@ -491,7 +491,7 @@
               </a>
             </li>
             <li class="icon-list">
-              <a class="customers-icon icon">
+              <a href="" class="customers-icon icon">
                 <svg
                   class="svg-customer"
                   width="104"
@@ -504,7 +504,7 @@
               </a>
             </li>
             <li class="icon-list">
-              <a class="customers-icon icon">
+              <a href="" class="customers-icon icon">
                 <svg
                   class="svg-customer"
                   width="104"
@@ -517,7 +517,7 @@
               </a>
             </li>
             <li class="icon-list">
-              <a class="customers-icon icon">
+              <a href="" class="customers-icon icon">
                 <svg
                   class="svg-customer"
                   width="104"
@@ -549,7 +549,7 @@
           <p class="social-media-text">Social media</p>
           <ul class="list sm-icons-footer">
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
@@ -563,7 +563,7 @@
               </a>
             </li>
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
@@ -577,7 +577,7 @@
               </a>
             </li>
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
@@ -591,7 +591,7 @@
               </a>
             </li>
             <li class="social-media-list">
-              <a class="sm-icon-f">
+              <a href="" class="sm-icon-f">
                 <svg
                   class="svg-stuff"
                   xmlns="http://www.w3.org/2000/svg"
