--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
           <!-- ____________________________________________________ img list section-->
           <ul class="list portfolio-img-list">
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc1a.jpg"
                   alt="Log in interface of a banking app"
@@ -95,7 +95,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc2a.jpg"
                   alt="Hand holding a mobile phone while doing wireless payment via QR code."
@@ -109,7 +109,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc3a.jpg"
                   alt="Laptop and a mobile phone, monitors turned on. Both devices on blackish background."
@@ -123,7 +123,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc4a.jpg"
                   alt="Hand steering a car wheel inside a car. Mobile phone with navigation of the road set on the front window."
@@ -137,7 +137,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc5a.jpg"
                   alt="A mobile phone with a full moon screen on. Four alternate screen of the full moon shown next to a device."
@@ -151,7 +151,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc6a.jpg"
                   alt="Smiling woman wearing orange sweater, a hat and headphones is looking at her mobile phone. She looks happy."
@@ -165,7 +165,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc7a.jpg"
                   alt="Six different layouts of the same instagram stories"
@@ -179,7 +179,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc8a.jpg"
                   alt="A woman wearing whiteish cloths and reusable shopping bag full of veggies, walking in the green scenery."
@@ -193,7 +193,7 @@
               </a>
             </li>
             <li class="image-link">
-              <a class="link aplication-link">
+              <a href="" class="link aplication-link">
                 <img
                   src="./images/pc9a.jpg"
                   alt="Barista pouring milk into coffee cup, only hands shown."
